Project2/force-app/main/default/objects/Order/fields/bSameAddress__c.field-meta.xml
<CustomField>
    <fullName>bSameAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same Billing and Shipping Address</label>
    <type>Checkbox</type>
</CustomField>