Project2/force-app/main/default/objects/Order/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Customer enters the city for billing address.</description>
    <label>City</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>