Project2/force-app/main/default/objects/Order/fields/LastLocation__c.field-meta.xml
<CustomField>
    <fullName>LastLocation__c</fullName>
    <label>LastLocation</label>
    <type>TextArea</type>
</CustomField>