Project2/force-app/main/default/objects/Order/fields/Lat__c.field-meta.xml
<CustomField>
    <fullName>Lat__c</fullName>
    <label>Lat__c</label>
    <length>10</length>
    <type>Text</type>
</CustomField>