Project2/force-app/main/default/objects/Order/fields/Lon__c.field-meta.xml
<CustomField>
    <fullName>Lon__c</fullName>
    <label>Lon__c</label>
    <length>10</length>
    <type>Text</type>
</CustomField>