Project2/force-app/main/default/objects/Order/fields/Security_Number__c.field-meta.xml
<CustomField>
    <fullName>Security_Number__c</fullName>
    <description>Security number on debit/credit card</description>
    <label>Security Number</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>