Project2/force-app/main/default/objects/Order/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName>
    <description>Customer enters their billing address.</description>
    <label>Street Address</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>