Project2/force-app/main/default/objects/Order/fields/The_Orders__c.field-meta.xml
<CustomField>
    <fullName>The_Orders__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>The Orders</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>