Project2/force-app/main/default/objects/Order/validationRules/First_Name_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(First_Name__c,&quot;^[a-z  A-Z]*$&quot;))</errorConditionFormula>
    <errorMessage>Invalid Input.</errorMessage>
</ValidationRule>