Project2/force-app/main/default/objects/Order/validationRules/First_Name_Validation_2.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Validation_2</fullName>
    <active>true</active>
    <errorConditionFormula>ISNUMBER(First_Name__c)</errorConditionFormula>
    <errorMessage>Invalid Input, only input characters.</errorMessage>
</ValidationRule>